# cpp_edication

./: README.md
algoritm/hanoi/: CMakeLists.txt  main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_A_monitoring/: main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_A_monitoring/test/1/: output.txt
algoritm/practice/ya_contest/data_structures/sprint_2_I_limitied_queue/: main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_J_list_queue/: main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_stack_queue/sprint_2_A_monitoring/: CMakeLists.txt  main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_stack_queue/sprint_2_D_caring_ma/: CMakeLists.txt  main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_stack_queue/sprint_2_E_all_contrast/: CMakeLists.txt  main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_stack_queue/sprint_2_F_stack_max/: CMakeLists.txt  main.cpp
algoritm/practice/ya_contest/data_structures/sprint_2_stack_queue/sprint_2_F_stack_max_effect/: main.cpp
algoritm/queue_by_two_stack/: main.cpp
algoritm/theory/hanoi/: main.cpp
algoritm/theory/stack/: main.cpp
first_app/: .gitignore  CMakeLists.txt  LogDuration.h  ini.cpp  ini.h  json.cpp  json.h  log_duration.h  main.cpp  people.cpp  people.h  proba.cpp  proba.h  xml.cpp  xml.h
rational/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp  proba.cpp  proba.h
tree/: CMakeLists.txt  main.cpp
ya_practicum/1_sprint/3_less/: CMakeLists.txt  main.cpp
ya_practicum/1_sprint/6_less/: CMakeLists.txt  main.cpp
(+16 files in other folders)
